# Multithreaded-Image-Processing-Pipeline

./: .gitignore  CMakeLists.txt  README.md
include/: pipeline.hpp  profiler.hpp
include/stages/: edge_detection.hpp  object_detection.hpp  preprocess.hpp  stage.hpp
src/: main.cpp  pipeline.cpp  profiler.cpp
src/stages/: edge_detection.cpp  object_detection.cpp  preprocess.cpp
